--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
             justify-content: center;
             align-items: center;
             color: #fff;
+            flex-direction: column;
         }
 
         #chat-window {
@@ -90,12 +91,41 @@
             text-align: left;
             background-color: rgba(255, 0, 102, 0.3);
             margin-right: 40px;
+            border-radius: 10px;
         }
 
         .receiver {
             text-align: right;
             background-color: rgba(255, 204, 255, 0.3);
             margin-left: 40px;
+            border-radius: 10px;
+        }
+
+        .boy-profile {
+            background-color: #79c5ff;
+            padding: 8px;
+            border-radius: 10px;
+            border: 1px solid #fff;
+        }
+
+        .girl-profile {
+            background-color: #f7a4d4;
+            padding: 8px;
+            border-radius: 10px;
+            border: 1px solid #fff;
+        }
+
+        footer {
+            margin-top: 20px;
+            font-size: 14px;
+            text-align: center;
+            color: #fff;
+        }
+
+        footer a {
+            color: #ffb3c6;
+            text-decoration: none;
+            font-weight: bold;
         }
     </style>
 </head>
@@ -110,11 +140,16 @@
         <div id="room-info"></div>
     </div>
 
+    <footer>
+        <p>Made with ❤️ by <a href="https://github.com" target="_blank">Nico Adajar</a></p>
+    </footer>
+
     <script src="/socket.io/socket.io.js"></script>
     <script>
         const socket = io();
         let username = '';
         let gender = '';
+        let userProfile = '';
 
         // Ask the user for their username and gender when the page loads
         function getUsernameAndGender() {
@@ -129,14 +164,22 @@
             if (!gender) {
                 gender = 'Boy'; // Default to Boy if no input is given
             }
+
             socket.emit('set-username-and-gender', { username, gender }); // Send the username and gender to the server
+
+            // Set profile design based on gender
+            if (gender === 'Boy') {
+                userProfile = 'boy-profile';
+            } else if (gender === 'Girl') {
+                userProfile = 'girl-profile';
+            }
         }
 
         // Display room information and messages
         socket.on('receive-message', (message) => {
             const messagesDiv = document.getElementById("messages");
             const roomInfo = document.getElementById("room-info");
-            
+
             // Display room info (which room the user is in)
             roomInfo.textContent = message;
 
@@ -152,7 +195,7 @@
             // Display the sender's gender along with their username
             const genderIcon = gender === 'Boy' ? '👦' : '👧';
 
-            newMessage.innerHTML = `<span class="heart-icon">❤️</span>${genderIcon} ${username}: ${message}`;
+            newMessage.innerHTML = `<span class="heart-icon">❤️</span><div class="${userProfile}">${genderIcon} ${username}: ${message}</div>`;
             messagesDiv.appendChild(newMessage);
 
             // Scroll to the bottom of the chat window
