--- a/public/index.html
+++ b/public/index.html
@@ -1,153 +1,13 @@
+<!-- public/index.html -->
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Valentine's Day Chat - Multiple Rooms</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background: linear-gradient(135deg, #ff4d6a, #ffb3c6);
-            margin: 0;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            color: #fff;
-        }
-
-        #chat-window {
-            width: 400px;
-            height: 600px;
-            border-radius: 10px;
-            border: 2px solid #fff;
-            background-color: rgba(255, 255, 255, 0.2);
-            display: flex;
-            flex-direction: column;
-            padding: 20px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-        }
-
-        #messages {
-            flex-grow: 1;
-            overflow-y: auto;
-            margin-bottom: 10px;
-            padding: 10px;
-            background: rgba(255, 255, 255, 0.1);
-            border-radius: 5px;
-            border: 1px solid #fff;
-        }
-
-        input {
-            width: 100%;
-            padding: 10px;
-            margin-top: 10px;
-            border-radius: 5px;
-            border: 1px solid #ff4d6a;
-            font-size: 14px;
-            color: #ff4d6a;
-        }
-
-        button {
-            width: 100%;
-            padding: 10px;
-            margin-top: 10px;
-            background-color: #ff4d6a;
-            border: none;
-            border-radius: 5px;
-            color: #fff;
-            font-size: 16px;
-            cursor: pointer;
-            transition: 0.3s ease;
-        }
-
-        button:hover {
-            background-color: #ff2a45;
-        }
-
-        .heart-icon {
-            font-size: 24px;
-            color: #ff4d6a;
-            margin-right: 8px;
-            display: inline-block;
-            transform: scale(1.2);
-            transition: 0.3s;
-        }
-
-        .heart-icon:hover {
-            transform: scale(1.4);
-        }
-
-        .message {
-            margin: 10px 0;
-            padding: 8px;
-            border-radius: 10px;
-            background-color: rgba(255, 255, 255, 0.3);
-            border: 1px solid #fff;
-        }
-
-        .sender {
-            text-align: left;
-            background-color: rgba(255, 0, 102, 0.3);
-            margin-right: 40px;
-        }
-
-        .receiver {
-            text-align: right;
-            background-color: rgba(255, 204, 255, 0.3);
-            margin-left: 40px;
-        }
-    </style>
-</head>
-<body>
-
-    <div id="chat-window">
-        <div id="messages"></div>
-        <input id="message-input" type="text" placeholder="Type a message..." />
-        <button id="send-btn">
-            <span class="heart-icon">❤️</span>Send
-        </button>
-        <div id="room-info"></div>
-    </div>
-
-    <script src="/socket.io/socket.io.js"></script>
-    <script>
-        const socket = io();
-
-        // Display room information and messages
-        socket.on('receive-message', (message) => {
-            const messagesDiv = document.getElementById("messages");
-            const roomInfo = document.getElementById("room-info");
-            
-            // Display room info (which room the user is in)
-            roomInfo.textContent = message;
-
-            // Display the message in the chat
-            const newMessage = document.createElement("div");
-            newMessage.classList.add("message");
-
-            // Randomly choose whether this is the sender or receiver's message
-            const isSender = Math.random() > 0.5;
-            if (isSender) {
-                newMessage.classList.add("sender");
-            } else {
-                newMessage.classList.add("receiver");
-            }
-
-            newMessage.innerHTML = `<span class="heart-icon">❤️</span>${message}`;
-            messagesDiv.appendChild(newMessage);
-
-            // Scroll to the bottom of the chat window
-            messagesDiv.scrollTop = messagesDiv.scrollHeight;
-        });
-
-        // Send message when user clicks send button
-        document.getElementById("send-btn").onclick = function() {
-            const message = document.getElementById("message-input").value;
-            socket.emit("send-message", message);
-            document.getElementById("message-input").value = "";
-        };
-    </script>
-
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Valentine's Video Call</title>
+    <link rel="stylesheet" href="%PUBLIC_URL%/styles.css" />
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
